Deletetask/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deletetask
  template:
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask
        image: todoappacr111.azurecr.io/deletetask:latest
        ports:
        - containerPort: 8000
